# wprs

./: .gitignore  Cargo.toml  readme.md  wprs.conf-example
src/: config.rs  main.rs  posts.rs
