[package]
name = "wprs"
version = "0.1.0"
authors = ["Marcus Kazmierczak <marcus@mkaz.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
oauth2 = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"]}
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
